add database url

--- a/backend/.env
+++ b/backend/.env
@@ -6,7 +6,7 @@ APP_PORT=7777
 
 #db
 # DATABASE_URL=postgres://ziyadem:KgnKm6FTsMLcT3ywlwPGHYSZYOD7LttO@dpg-cnkluvi1hbls73co4d60-a.frankfurt-postgres.render.com/crm_market
-DATABASE_URL=postgresql://postgres:ziyadem@127.0.0.1:5432/crm_uc
+DATABASE_URL=postgresql://ziyadem:Q93e1kbnjWzuuDHiUGI3yI9Uwb5MwogM@dpg-cq3g1hcs1f4s73ffuiqg-a/postgresql_9bbw
 #swager
 SWAGGER_PATH='/docs'
 
