--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-VITE_API_KEY='http://localhost:7777'
+VITE_API_KEY='https://market-server-wu07.onrender.com'
 # VITE_API_KEY='https://crm-server-vszu.onrender.com'
